Fix custom shield dark mode conflicts

--- a/src/modules/native-dark-mode/styles/header.css
+++ b/src/modules/native-dark-mode/styles/header.css
@@ -13,21 +13,13 @@
   height: 31px;
 }
 
-.mh-dark .mousehuntHud-menu.default,
-.mh-dark .huntersHornView .huntersHornView__timer {
-  filter: brightness(0.9);
-}
-
 .mh-dark .mousehuntHud-menu.default {
   z-index: 90;
+  filter: brightness(0.9);
 }
 
 .mh-dark .mousehuntHud-marbleDrawer {
   background-blend-mode: exclusion;
-}
-
-.mh-dark a.mousehuntHud-shield.golden.default {
-  filter: drop-shadow(0 0 5px rgb(92 77 30 / 50%)) brightness(0.9);
 }
 
 .mh-dark .mousehuntHud-menu ul li:hover a,
